<?xml version="1.0"?>
<package>
  <name>tue_carrot_planner</name>
  <version>0.0.0</version>
  <description>Simple Carrot Planner</description>

  <maintainer email="todo@tue.nl">Jos Elfring</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tue_move_base_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tue_move_base_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
